--- a/src/style.css
+++ b/src/style.css
@@ -1,174 +1,234 @@
 body {
-    font-family: "Poppins", sans-serif;
-    background: #272044;
+  font-family: "Poppins", sans-serif;
+  background: #272044;
 }
 
 .container {
-    max-width: 1400px;
-    margin: 0 auto;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .grid {
-    display: grid;
-    grid-gap: 64px;
+  display: grid;
+  grid-gap: 64px;
 }
 
 .img-responsive {
-    max-width: 100%;
+  max-width: 100%;
+  display: block;
 }
 
 .grid-2-columns {
-grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
 
 .grid-3-columns {
-    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-section {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 100px 0;
+.grid-3-columns-with-first-narrow {
+  grid-template-columns: 1fr 2fr 2fr;
 }
 
-header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    padding: 200px 0;
-}
-
-header h1 {
-    font-weight: 700;
-    font-size: 96px;
-    line-height: 1;
+.card {
+    background: white;
     margin: 30px 0;
 }
 
-header h2 {
-    font-weight: 400;
-    font-size: 40px;
+.card-body {
+    padding: 30px;
+}
+
+.card-footer {
+    padding: 0 30px 10px;
+}
+
+.btn {
+    display: block;
+    color: white;
+    font-weight: 700;
+    font-size: 14px;
     line-height: 1.5;
-    margin: 0;
+    text-align: center;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 16px;
+    background-color: #462cb3;
+    text-decoration: none;
+}
+
+
+
+section {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 100px;
+}
+
+section.secondary {
+  background: #f8f8f8;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../images/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
+  padding: 200px 0;
+}
+
+header h1 {
+  font-weight: 700;
+  font-size: 96px;
+  line-height: 1;
+  margin: 30px 0;
+}
+
+header h2 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.5;
+  margin: 0;
 }
 
 header h3 {
-    font-weight: 900;
-    font-size: 24px;
-    line-height: 1.5;
-    letter-spacing: 5px;
-    margin: 0;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  margin: 0;
 }
 
 header a {
-    color: #272044;
-    font-weight: 700;
-    font-size: 14px;
-    padding: 16px 32px;
-    margin-top: 32px;
-    display: inline-block;
-    line-height: 1.5;
-    letter-spacing: 3px;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: white;
-
+  color: #272044;
+  font-weight: 700;
+  font-size: 14px;
+  padding: 16px 32px;
+  margin-top: 32px;
+  display: inline-block;
+  line-height: 1.5;
+  letter-spacing: 3px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: white;
 }
 
 main {
-    background-color: white;
+  background-color: white;
 }
 
 main h2 {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.5;
-    margin: 0;
-    letter-spacing: 5px;
-    color: #272044;
-    opacity: 0.3;
-    text-transform: uppercase;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
 }
 
 main h3 {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+}
+
+main h4 {
     font-weight: 700;
-    font-size: 40px;
-    line-height: 1.5;
+    font-size: 24px;
+    line-height: 1;
+    color: #272044;
+    margin: 0;
+}
+
+main h5 {
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 1;
     color: #272044;
     margin: 0;
 }
 
 main p {
-   font-style: normal; 
-   font-weight: 400;
-   font-size: 16px;
-   line-height: 1.5;
-   color: #272044;
-   opacity: 0.7;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  opacity: 0.7;
 }
 
 footer {
-    color: white;
-    background-image: linear-gradient(rgba(39, 32, 68, 0.9), rgba(39, 32, 68, 0.9)),url(../images/bali-footer.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-   
+  color: white;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url(../images/bali-footer.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 footer h3 {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
 }
 
 footer p {
-    font-weight: 400;
-    font-size: 16px;
-    opacity: 0.9;
-    line-height: 24px;
+  font-weight: 400;
+  font-size: 16px;
+  opacity: 0.9;
+  line-height: 24px;
 }
 
 footer ul {
-   padding: 0;
+  padding: 0;
 }
 
 footer li {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 footer a {
-    color: white;
-    opacity: 0.7;
+  color: white;
+  opacity: 0.7;
 }
 
 @media (max-width: 960px) {
-    header {
-        padding: 60px 0;
-    }
+  header {
+    padding: 60px 0;
+  }
 
-    header h1 {
-        font-size: 48px;
-    }
+  header h1 {
+    font-size: 48px;
+  }
 
-    header h2 {
-        font-size: 20px;
-    }
+  header h2 {
+    font-size: 20px;
+  }
 
-    header h3 {
-        font-size: 12px;
-    }
+  header h3 {
+    font-size: 12px;
+  }
 
-    .grid {
-        grid-template-columns: 1fr;
-        grid-gap: 32px;
-    }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 32px;
+  }
 
-    section {
-        padding: 30px;
-    }
-    
+  section {
+    padding: 30px;
+  }
 }
