Added a Gallery and gallery images in a grid

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ body {
 
 .grid-3-columns {
     grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px 30px;
 }
 
 .grid-3-columns-with-first-narrow {
